tests/parser-test-files/bad-files/parse-toplevel.2.error
error: Invalid toplevel form
  --> test:4:1
   |
 4 |  (unknown)
   |   ^^^^^^^ unknown toplevel form
